container styles at project

--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,9 @@ body {
     display: grid;
     place-items: center;
 }
+
+.container {
+    width: 200px;
+    height: 350px;
+    position: relative;
+}
