span styles at project

--- a/src/styles.css
+++ b/src/styles.css
@@ -33,4 +33,10 @@ body {
         left:0;
         background-color: red;
     }
+
+    span{
+        background-color: yellow;
+        width: 200px;
+        height: 350px;
+    }
 }
