--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,14 @@ body {
 
     span{
         background-color: #121212;
-        width: 200px;
+        width:  200px;
         height: 350px;
+        font-size: 10rem;
+        color: #fff;
+        place-items: center;
+        font-weight: 600;
+        text-shadow: 10px 10px 20px crimson;
+        border-radius: 24px ;
+        box-shadow: 0px 15px 25px rgba(0, 0, 0, .5);
     }
 }
