--- a/src/styles.css
+++ b/src/styles.css
@@ -49,3 +49,13 @@ body {
         box-shadow: 0px 15px 25px rgba(0, 0, 0, .5);
     }
 }
+
+
+@keyframes rotate3d {
+    from {
+        transform: perspective(1000px) rotateY(0deg);
+    }
+    to {
+       transform: perspective(1000px) rotateY(360deg); 
+    }
+}
