--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,7 @@ body {
     position: relative;
     transform-style: preserve-3d ;
     transform: perspective(1000px) ;
+    animation: rotate3d 20s linear infinite;
 
     div{
         position: absolute;
