--- a/src/styles.css
+++ b/src/styles.css
@@ -21,12 +21,14 @@ body {
 }
 
 .container {
+    margin-top: 10%;
     width: 200px;
     height: 350px;
     position: relative;
     transform-style: preserve-3d ;
     transform: perspective(1000px) ;
     animation: rotate3d 20s linear infinite;
+   
 
     div{
         position: absolute;
@@ -43,6 +45,7 @@ body {
         height: 350px;
         font-size: 10rem;
         color: #fff;
+        display: grid;
         place-items: center;
         font-weight: 600;
         text-shadow: 10px 10px 20px crimson;
